--- a/src/sass/_yourorder.scss
+++ b/src/sass/_yourorder.scss
@@ -15,7 +15,7 @@
   top: 50%;
   left: 50%;
   min-width: 335px;
-  max-height: 98vh;
+  max-height: 94vh;
   overflow-y: auto;
   padding: 20px;
   border-radius: 20px;
